deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greenthreads
  labels:
    app: greenthreads
spec:
  selector:
    app: greenthreads
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
